# niceSmartCRM

./: .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml
crm/: crm_cmd.py  crm_core.py  crm_web.py  db.py  em.py  i18n_config.py  smart_crm.py  smartcrm_adapter.py  version.py  xmi.py
crm/resources/: crm-schema.yaml
crm/resources/i18n/: de.yaml  en.yaml
docs/: index.md
linkml/: person.py  person_linkml.yaml  person_schema.json  persons.json  persons.ttl  persons.yaml  test_linkml
scripts/: blackisort  run
search/: search_index.json
tests/: test_crm_core.py  test_db.py  test_linkml.py  test_xmi.py
