# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niceSmartCRM"
description = "nicegui based Customer Relation Ship Management"
keywords = [ "nicegui", "CRM"]
home-page = "https://github.com/BITPlan/niceSmartCRM"
authors = [
  {name = "Wolfgang Fahl", email = "wf@WolfgangFahl.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@WolfgangFahl.com" },
]
readme = "README.md"
license = {text = "Apache-2.0"} 
dependencies = [
	# https://github.com/WolfgangFahl/nicegui_widgets
	"ngwidgets>=0.8.12",
	# https://pypi.org/project/dataclasses-json/
	"dataclasses-json>=0.6.1",
	# https://github.com/trentm/python-markdown2
	"markdown2>=2.4.11",
	# https://pypi.org/project/SQLAlchemy/
	"SQLAlchemy>=2.0.25", 
	# https://pypi.org/project/pymysql/
	"pymysql>=1.1.0",
	# https://pypi.org/project/PyYAML/
	"PyYAML>=6.0.1"
]

requires-python = ">=3.9"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "crm/__init__.py"

[project.urls]
Home = "https://github.com/BITPlan/niceSmartCRM"
Documentation = "https://wiki.bitplan.com/index.php/niceSmartCRM"
Source = "https://github.com/BITPlan/niceSmartCRM"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["crm"]

[tool.hatch.build.targets.wheel.sources]
"crm" = "crm"


[project.scripts]
smartcrm = "crm.crm_cmd:main"
