# see https://flit.pypa.io/en/latest/pyproject_toml.html
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "niceSmartCRM"
description = "nicegui based Customer Relation Ship Management"
keywords = [ "nicegui", "CRM"]
home-page = "https://github.com/BITPlan/niceSmartCRM"
authors = [
  {name = "Wolfgang Fahl", email = "wf@WolfgangFahl.com"}
]
maintainers = [
  { name = "Wolfgang Fahl", email = "wf@WolfgangFahl.com" },
]
readme = "README.md"
license = {text = "Apache-2.0"}
dependencies = [
	# https://pypi.org/project/pybasemkit/
	# https://github.com/WolfgangFahl/pybasemkit
	# Python base module kit: YAML/JSON I/O, structured logging, CLI tooling, shell execution, and remote pydevd debug support.
	"pybasemkit>=0.0.4",
	# https://github.com/WolfgangFahl/nicegui_widgets
	"ngwidgets>=0.28.0",
	# https://pypi.org/project/dataclasses-json/
	"dataclasses-json>=0.6.1",
	# https://github.com/trentm/python-markdown2
	"markdown2>=2.4.11",
	# https://pypi.org/project/pymysql/
	"pymysql>=1.1.0",
	# https://pypi.org/project/PyYAML/
	"PyYAML>=6.0.1",
	# https://pypi.org/project/linkml/
	"linkml>=1.6.8"
	#
]

requires-python = ">=3.10"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: User Interfaces",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "crm/__init__.py"

[project.urls]
Home = "https://github.com/BITPlan/niceSmartCRM"
Documentation = "https://wiki.bitplan.com/index.php/niceSmartCRM"
Source = "https://github.com/BITPlan/niceSmartCRM"

[project.optional-dependencies]
test = [
  "green",
  "tox",
]

[tool.hatch.build.targets.wheel]
only-include = ["crm"]

[tool.hatch.build.targets.wheel.sources]
"crm" = "crm"

[project.scripts]
smartcrm = "crm.crm_cmd:main"
